# central-api

./: .example.env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  debug.rs  index.html  openapi.oas.yml  readme.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: docker-publish.yml  docker.yml  precommit.yml  redoc.yml  tarpaulin.yml  test.yml
config/: db.sql
migrations/2022-04-10-095111_create_agents/: down.sql  up.sql
src/: auth.rs  bin.rs  common.rs  config.rs  db.rs  download.rs  error.rs  handler.rs  lib.rs  main.rs  models.rs  schema.rs  structs.rs  timelocked_hashmap.rs  upload.rs  util.rs  websockets.rs
src/endpoints/: auth.rs  download.rs  info.rs  mod.rs  upload.rs  util.rs  websockets.rs
tests/: common.rs  test_file_download.rs  test_old_state_remove.rs  test_ping_drop.rs  test_status_request.rs  test_websocket_auth.rs  test_websocket_auth_failure.rs
www/static/: index.html
