[package]
name = "central-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ws-com-framework = { git="https://github.com/file-share-platform/ws-com-framework", rev="1b7b6e1562f40f4591a341170f5ade262c2dca60" }

# Logging & User Interaction
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"

# Async Crates
serde = {version = "1.0.144", features = ["derive"]}
async-trait = "0.1.57"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3.23"
async-stream = "0.3.3"
linked-hash-map = "0.5.6"

# Actix
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4"
actix-extensible-rate-limit = "0.2.1"

# Database crates
rand = "0.8.5"
sha2 = "0.10.2"
diesel = { version="2.0.0", features = ["r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version="2.0.0" }

[dev-dependencies]
serde_json = "1.0.85"
tungstenite = { git="https://github.com/riptide-org/tungstenite-rs", branch="ISSUE-199-READ-BODY-ON-FAILED-READ" }
reqwest = { version="0.11.11", features = ["json"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
ntest = "0.8.1"

[lib]
name = "central_api_lib"
path = "src/lib.rs"

[[bin]]
name = "central_api"
path = "src/bin.rs"
